--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "otf.project.otf"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 39
-        versionName "1.1"
+        versionCode 40
+        versionName "1.2"
         multiDexEnabled true
     }
 
@@ -73,20 +73,20 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.3'
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.github.hotchemi:permissionsdispatcher:2.4.0') {
         exclude module: "support-v13"
     }
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.github.kobakei.grenade:library:1.1.1'
 
     compile 'commons-io:commons-io:2.4'
-    implementation 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    implementation 'com.android.support:cardview-v7:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
     compile 'org.greenrobot:eventbus:3.0.0'
 
 
@@ -100,15 +100,27 @@ dependencies {
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile 'com.nexmo:verify:4.0.0'
     compile 'com.koushikdutta.async:androidasync:2.+'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:design:25.4.0'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     annotationProcessor 'com.github.kobakei.grenade:processor:1.1.1'
 
     compile 'org.js-labs:js-collider:0.1.2'
-
-
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
+        transitive = true
+    }
+    compile('com.crashlytics.sdk.android:answers:1.4.3@aar') {
         transitive = true;
     }
+    compile('com.crashlytics.sdk.android:crashlytics-ndk:2.0.5@aar') {
+        transitive = true;
+    }
+
+
+}
+
+crashlytics {
+    enableNdk true
+    androidNdkOut 'src/main/obj'
+    androidNdkLibsOut 'src/main/libs'
 }
